apps/student-reg/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-reg
  namespace: student-reg-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: student-reg.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-reg
                port:
                  number: 80
